@@ -60,7 +60,7 @@ if {$tcl_platform(platform) == "windows"} {
 package forget app-tkchat	;# Workaround until I can convince people
 ;# that apps are not packages.	:)  DGP
 package provide app-tkchat \
-    [regexp -inline {\d+(?:\.\d+)?} {$Revision: 1.170 $}]
+    [regexp -inline {\d+(?:\.\d+)?} {$Revision: 1.171 $}]
 
 # Maybe exec a user defined preload script at startup (to set Tk options,
 # for example.
@@ -87,7 +87,7 @@ namespace eval ::tkchat {
     variable HOST http://mini.net
 
     variable HEADUrl {http://cvs.sourceforge.net/viewcvs.py/tcllib/tclapps/apps/tkchat/tkchat.tcl?rev=HEAD}
-    variable rcsid   {$Id: tkchat.tcl,v 1.170 2004/06/29 23:32:32 patthoyts Exp $}
+    variable rcsid   {$Id: tkchat.tcl,v 1.171 2004/08/05 14:31:11 patthoyts Exp $}
 
     variable MSGS
     set MSGS(entered) [list \
@@ -302,7 +302,7 @@ proc ::tkchat::ParseHistLog {log} {
     set retList {}    
     set MsgRE {^\s*(?:Mon|Tue|Wed|Thu|Fri|Sat|Sun).+?\[([^\]]+)\]\s+([^:]+):?\s*(.*)$}
     set ircRE {ircbridge: \*\*\* (.+) (.+)$}
-    set TimeRE {^(.+)\s+(.+)\s+(\d{1,2})\s+(\d\d:\d\d:\d\d)\s+(\d{4})}
+    set TimeRE {^(.+?)\s+(.+?)\s+(\d{1,2})\s+(\d\d:\d\d:\d\d)\s+(\d{4})}
     set logTime 0
     # fetch log
     set url "$Options(URLlogs)/$log"
